Fixed some alignment issues

--- a/chat.css
+++ b/chat.css
@@ -3,7 +3,7 @@
 }
 
 .chat {
-    max-height: 90vh;
+    max-height: 85vh;
     overflow-y: scroll;
 }
 
